# ElecSolver

./: .gitignore  LICENCE.txt  LICENSE.txt  README.md  env.yml  pyproject.toml  zensical.toml
.github/workflows/: publish-pypi.yml  python-package.yml  test.yml
docs/: extra-uses-hydraulic-or-thermal-system-modeling.md  index.md  netlist-import-feature.md  solver-suggestions.md
docs/components/: frequency-system-builder.md  temporal-system-builder.md
src/ElecSolver/: FrequencySystemBuilder.py  NetlistDumper.py  NetlistGenerator.py  SystemBuilder.py  TemporalSystemBuilder.py  __init__.py  netlist_parser.py  utils.py
tests/: test_gradients.py  test_netlist_parser.py  test_sysbuilder.py  test_temporal_netlist_dumper.py  test_temporal_system.py  test_utils.py  tests_sysbuilder.py
