[project]
name = "ElecSolver"
version = "v0.1.0
description = "Formalizes electric systems as linear problems for temporal and frequency-domain studies."
authors = [
    { name = "William Piat", email = "william.piat3@gmail.com" }
]
requires-python = ">=3.12"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics"
]
dependencies = [
    "numpy",
    "scipy",
    "networkx",
]

[project.urls]
Homepage = "https://github.com/williampiat3/ElecSolver"

[project.optional-dependencies]
dev = [
    "pytest",
    "pymumps",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.readme]
file="README.md"
content-type = "text/markdown"

[tool.setuptools]
platforms = [
    "Linux",
    "Unix",
]

[build-system]
requires = [
    "setuptools>=61.0"
]
build-backend = "setuptools.build_meta"


[tool.setuptools_scm]
version_file = "src/ElecSolver/_version.py"